RESOLVED FIXED178397
Leak of one AVSampleCursor inside ImageDecoderAVFObjC::createFrameImageAtIndex()
https://bugs.webkit.org/show_bug.cgi?id=178397
Summary Leak of one AVSampleCursor inside ImageDecoderAVFObjC::createFrameImageAtIndex()
Jer Noble
Reported 2017-10-17 10:33:05 PDT
Leak of one AVSampleCursor inside ImageDecoderAVFObjC::createFrameImageAtIndex()
Attachments
Patch (1.83 KB, patch)
2017-10-17 10:34 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-10-17 10:34:37 PDT
Radar WebKit Bug Importer
Comment 2 2017-10-17 10:34:49 PDT
WebKit Commit Bot
Comment 3 2017-10-17 11:33:25 PDT
Comment on attachment 324026 [details] Patch Clearing flags on attachment: 324026 Committed r223560: <https://trac.webkit.org/changeset/223560>
WebKit Commit Bot
Comment 4 2017-10-17 11:33:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.