Leak of one AVSampleCursor inside ImageDecoderAVFObjC::createFrameImageAtIndex() https://bugs.webkit.org/show_bug.cgi?id=178397

Reviewed by Eric Carlson.

Explicitly wrap the return value of -copy in a RetainPtr.

* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(WebCore::ImageDecoderAVFObjC::createFrameImageAtIndex):


Canonical link: https://commits.webkit.org/194622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223560 268f45cc-cd09-0410-ab3c-d52691b4dbfc